--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#About">About</a></li>
                 <li><a href="#service">Service</a></li>
                 <li><a href="#skill">Skills</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
